# chatgpt-cli

./: Cargo.toml  Config.toml  README.md
.github/workflows/: release.yml
src/: client.rs  error.rs  lib.rs  main.rs  prompt.rs  tokenizer.rs  types.rs
