[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1", features = ["derive"] }
derive_builder = "0.12"
eventsource-stream = "0.2"
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
reqwest = {version ="0.11",features = ["blocking", "json","stream"]}
reqwest-eventsource = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tiktoken-rs = "0.2"
tokio = {version = "1.15",features = ["full"]}
tokio-stream = "0.1"
uuid = {version="1.3",features =["v4"]}
spinners = "4.1"
inquire = "0.6"
